FIX(home-page): z-index updated
Jira: [Header component (z-index)](https://cozyhometeam.atlassian.net/browse/CH-62)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,7 +15,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-	z-index: 2;
+	z-index: 1000;
 
 	&__logo {
 		cursor: pointer;
